--- a/TwoChange/app/src/main/res/layout/activity_new_profile.xml
+++ b/TwoChange/app/src/main/res/layout/activity_new_profile.xml
@@ -6,291 +6,120 @@
     android:layout_height="match_parent"
     android:background="@color/PrimaryBackgroundColor">
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="pes.twochange.presentation.activity.NewProfileActivity">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:context="pes.twochange.presentation.activity.EditProfileActivity">
 
-        <TextView
-            android:id="@+id/userNameLbl"
-            android:layout_width="339dp"
-            android:layout_height="21dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
-            android:text="Username: *"
-            android:textSize="18sp"
-            app:layout_constraintHorizontal_bias="0.538"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/usernameInputLayout"
+            style="@style/EditProfileStyle.TextInputLayout"
+            android:hint="Username *">
         <EditText
             android:id="@+id/userNameField"
-            android:layout_width="339dp"
-            android:layout_height="42dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            style="@style/EditProfileStyle"
             android:layout_marginTop="8dp"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text=""
-            app:layout_constraintHorizontal_bias="0.518"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userNameLbl"
-            tools:layout_editor_absoluteY="43dp" />
+            android:inputType="textPersonName" />
+        </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:id="@+id/nameLbl"
-            android:layout_width="339dp"
-            android:layout_height="21dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:text="Name: *"
-            android:textSize="18sp"
-            app:layout_constraintHorizontal_bias="0.538"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/userNameField" />
 
+        <android.support.design.widget.TextInputLayout
+            style="@style/EditProfileStyle.TextInputLayout"
+            android:hint="Name *">
         <EditText
             android:id="@+id/nameField"
-            android:layout_width="339dp"
-            android:layout_height="42dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            style="@style/EditProfileStyle"
             android:layout_marginTop="8dp"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text=""
-            app:layout_constraintHorizontal_bias="0.518"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameLbl"
-            tools:layout_editor_absoluteY="43dp" />
+            android:inputType="textPersonName" />
+        </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:id="@+id/surnameLbl"
-            android:layout_width="339dp"
-            android:layout_height="21dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:text="Surname: *"
-            android:textSize="18sp"
-            app:layout_constraintHorizontal_bias="0.538"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/nameField" />
 
+        <android.support.design.widget.TextInputLayout
+            style="@style/EditProfileStyle.TextInputLayout"
+            android:hint="Surname *">
         <EditText
             android:id="@+id/surnameField"
-            android:layout_width="339dp"
-            android:layout_height="42dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            style="@style/EditProfileStyle"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text=""
-            app:layout_constraintHorizontal_bias="0.517"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/surnameLbl" />
+            android:inputType="textPersonName" />
+        </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:id="@+id/phoneLbl"
-            android:layout_width="339dp"
-            android:layout_height="21dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:text="Phone Number:"
-            android:textSize="18sp"
-            app:layout_constraintHorizontal_bias="0.538"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/surnameField" />
 
+        <android.support.design.widget.TextInputLayout
+            style="@style/EditProfileStyle.TextInputLayout"
+            android:hint="Phone Number">
         <EditText
             android:id="@+id/phoneField"
-            android:layout_width="339dp"
-            android:layout_height="42dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            style="@style/EditProfileStyle"
             android:ems="10"
-            android:inputType="phone"
-            android:text=""
-            app:layout_constraintHorizontal_bias="0.517"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/phoneLbl" />
+            android:inputType="phone" />
+        </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:id="@+id/addressLbl"
-            android:layout_width="339dp"
-            android:layout_height="21dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:text="Address:"
-            android:textSize="18sp"
-            app:layout_constraintHorizontal_bias="0.538"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/phoneField" />
 
+        <android.support.design.widget.TextInputLayout
+            style="@style/EditProfileStyle.TextInputLayout"
+            android:hint="Address">
         <EditText
             android:id="@+id/addressField"
-            android:layout_width="339dp"
-            android:layout_height="42dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            style="@style/EditProfileStyle"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text=""
-            app:layout_constraintHorizontal_bias="0.517"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/addressLbl" />
+            android:inputType="textPersonName" />
+        </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:id="@+id/zipLbl"
-            android:layout_width="339dp"
-            android:layout_height="21dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:text="Zip Code:"
-            android:textSize="18sp"
-            app:layout_constraintHorizontal_bias="0.538"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/addressField" />
 
+        <android.support.design.widget.TextInputLayout
+            style="@style/EditProfileStyle.TextInputLayout"
+            android:hint="Zip Code">
         <EditText
             android:id="@+id/zipField"
-            android:layout_width="339dp"
-            android:layout_height="42dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            style="@style/EditProfileStyle"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text=""
-            app:layout_constraintHorizontal_bias="0.517"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/zipLbl" />
+            android:inputType="phone" />
+        </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:id="@+id/cityLbl"
-            android:layout_width="339dp"
-            android:layout_height="21dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:text="City:"
-            android:textSize="18sp"
-            app:layout_constraintHorizontal_bias="0.538"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/zipField" />
 
+        <android.support.design.widget.TextInputLayout
+            style="@style/EditProfileStyle.TextInputLayout"
+            android:hint="City">
         <EditText
             android:id="@+id/cityField"
-            android:layout_width="339dp"
-            android:layout_height="42dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            style="@style/EditProfileStyle"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text=""
-            app:layout_constraintHorizontal_bias="0.517"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/cityLbl" />
+            android:inputType="textPersonName" />
+        </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:id="@+id/stateLbl"
-            android:layout_width="339dp"
-            android:layout_height="21dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:text="State/Province:"
-            android:textSize="18sp"
-            app:layout_constraintHorizontal_bias="0.538"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/cityField" />
 
+        <android.support.design.widget.TextInputLayout
+            style="@style/EditProfileStyle.TextInputLayout"
+            android:hint="State/Province">
         <EditText
             android:id="@+id/stateField"
-            android:layout_width="339dp"
-            android:layout_height="42dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            style="@style/EditProfileStyle"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text=""
-            app:layout_constraintHorizontal_bias="0.517"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/stateLbl" />
+            android:inputType="textPersonName" />
+        </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:id="@+id/countryLbl"
-            android:layout_width="339dp"
-            android:layout_height="21dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:text="Country:"
-            android:textSize="18sp"
-            app:layout_constraintHorizontal_bias="0.538"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/stateField" />
 
+        <android.support.design.widget.TextInputLayout
+            style="@style/EditProfileStyle.TextInputLayout"
+            android:hint="Country">
         <EditText
             android:id="@+id/countryField"
-            android:layout_width="339dp"
-            android:layout_height="42dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            style="@style/EditProfileStyle"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text=""
-            app:layout_constraintHorizontal_bias="0.517"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/countryLbl" />
+            android:inputType="textPersonName" />
+        </android.support.design.widget.TextInputLayout>
+
 
         <Button
             android:id="@+id/FinishBtn"
-            android:layout_width="339dp"
-            android:layout_height="45dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            style="@style/EditProfileStyle.TextInputLayout"
             android:background="@drawable/orangeroundedbutton"
             android:text="Finish"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.517"
-            android:layout_marginTop="45dp"
-            app:layout_constraintTop_toBottomOf="@+id/countryField" />
-    </android.support.constraint.ConstraintLayout>
+            android:textSize="18sp" />
+
+    </LinearLayout>
 </ScrollView>
