--- a/TwoChange/app/src/main/res/values/styles.xml
+++ b/TwoChange/app/src/main/res/values/styles.xml
@@ -17,4 +17,16 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="EditProfileStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="EditProfileStyle.TextInputLayout" parent="EditProfileStyle">
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:layout_marginEnd">32dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+        <item name="android:layout_marginStart">32dp</item>
+    </style>
+
 </resources>
