--- a/TwoChange/app/src/main/res/layout/content_post_ad.xml
+++ b/TwoChange/app/src/main/res/layout/content_post_ad.xml
@@ -110,74 +110,94 @@
                     android:layout_width="match_parent"
                     android:layout_height="16dp" />
 
-                <TextView
-                    android:id="@+id/itemInfoLbl"
-                    android:layout_width="match_parent"
+                <Spinner
+                    android:id="@+id/adTypeSpn"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="@string/ad_product_info"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                    android:layout_gravity="center"
+                    android:entries="@array/ad_types" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="16dp" />
 
                 <LinearLayout
+                    android:id="@+id/itemDetailsLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="8dp"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <EditText
-                        android:id="@+id/yearTxt"
-                        android:layout_width="0dp"
+                    <TextView
+                        android:id="@+id/itemInfoLbl"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:ems="10"
-                        android:hint="@string/ad_year"
-                        android:inputType="number"
-                        android:maxLines="1" />
+                        android:gravity="center_horizontal"
+                        android:text="@string/ad_product_info"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
-                    <EditText
-                        android:id="@+id/priceTxt"
-                        android:layout_width="0dp"
+                    <TextView
+                        android:id="@+id/stateLbl"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:layout_weight="3"
-                        android:ems="10"
-                        android:hint="@string/ad_original_price"
-                        android:inputType="number"
-                        android:maxLines="1" />
+                        android:layout_marginBottom="-8dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/ad_state_label"
+                        android:textSize="12sp" />
+
+                    <Spinner
+                        android:id="@+id/stateSpn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:entries="@array/product_states" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="8dp"
+                        android:orientation="horizontal">
+
+                        <EditText
+                            android:id="@+id/yearTxt"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:ems="10"
+                            android:hint="@string/ad_year"
+                            android:inputType="number"
+                            android:maxLines="1" />
+
+                        <EditText
+                            android:id="@+id/priceTxt"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:layout_weight="3"
+                            android:ems="10"
+                            android:hint="@string/ad_original_price"
+                            android:inputType="number"
+                            android:maxLines="1" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/ad_estimated_rating"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/ratingLbl"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="0/100"
+                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title" />
+
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/stateLbl"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="-8dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/ad_state_label"
-                    android:textSize="12sp" />
-
-                <Spinner
-                    android:id="@+id/stateSpn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:entries="@array/product_states" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/ad_estimated_rating"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/ratingLbl"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="0/100"
-                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title" />
 
                 <Button
                     android:id="@+id/plublishBtn"
