--- a/TwoChange/app/src/main/res/layout/activity_profile.xml
+++ b/TwoChange/app/src/main/res/layout/activity_profile.xml
@@ -137,4 +137,24 @@
         android:background="@color/colorAccent"
         android:visibility="gone"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/notis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enable notifications"
+            android:layout_marginLeft="175dp"/>
+
+        <Switch
+            android:id="@+id/switch_notis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/notis" />
+
+    </LinearLayout>
+
+
 </LinearLayout>
