--- a/TwoChange/app/src/main/res/layout/activity_menu_provisional.xml
+++ b/TwoChange/app/src/main/res/layout/activity_menu_provisional.xml
@@ -25,7 +25,7 @@
         android:layout_height="52dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="Search User"
+        android:text="Search Product"
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
