--- a/TwoChange/app/src/main/res/layout/activity_search.xml
+++ b/TwoChange/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pes.twochange.presentation.activity.SearchProfileActivity">
+    tools:context="pes.twochange.presentation.activity.SearchActivity">
 
     <EditText
         android:id="@+id/searchField"
@@ -15,7 +15,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text=""
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
