--- a/TwoChange/app/src/main/res/layout/product_item_row.xml
+++ b/TwoChange/app/src/main/res/layout/product_item_row.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:paddingTop="4dp"
     android:paddingBottom="4dp">
 
@@ -10,19 +11,14 @@
         android:id="@+id/product_item_row_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:contentDescription="@string/product_item_row_image_description"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:contentDescription="@string/product_item_row_image_description" />
 
     <TextView
         android:id="@+id/product_item_row_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/product_item_row_image"
-        android:layout_alignParentEnd="true"
         android:textColor="@color/black"
         android:layout_margin="16dp"
         android:textSize="16sp"/>
 
-</RelativeLayout>
+</LinearLayout>
