--- a/TwoChange/app/src/main/res/layout/activity_explore.xml
+++ b/TwoChange/app/src/main/res/layout/activity_explore.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context=".presentation.controller.ExploreActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/image1"
+        android:layout_margin="16dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
+
+    <ImageView
+        android:id="@+id/image2"
+        android:layout_margin="16dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
+
+</LinearLayout>
