--- a/TwoChange/app/src/main/res/layout/content_post_ad.xml
+++ b/TwoChange/app/src/main/res/layout/content_post_ad.xml
@@ -65,6 +65,7 @@
                     android:text="@string/ad_add_images" />
 
                 <LinearLayout
+                    android:id="@+id/addImgLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
@@ -192,6 +193,7 @@
                                 android:id="@+id/yearTxt"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:digits="0123456789"
                                 android:ems="10"
                                 android:hint="@string/ad_year"
                                 android:inputType="number"
@@ -208,6 +210,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
+                                android:digits="0123456789"
                                 android:ems="10"
                                 android:hint="@string/ad_original_price"
                                 android:inputType="number"
