--- a/TwoChange/app/src/main/res/layout/activity_explore.xml
+++ b/TwoChange/app/src/main/res/layout/activity_explore.xml
@@ -21,4 +21,11 @@
         android:layout_width="200dp"
         android:layout_height="200dp" />
 
+    <Button
+        android:id="@+id/button"
+        android:text="UPLOAD"
+        android:layout_margin="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
