--- a/TwoChange/app/src/main/res/layout/fragment_ad_list.xml
+++ b/TwoChange/app/src/main/res/layout/fragment_ad_list.xml
@@ -8,7 +8,7 @@
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
 
     <android.support.v7.widget.RecyclerView
