--- a/TwoChange/app/src/main/res/layout/activity_explore.xml
+++ b/TwoChange/app/src/main/res/layout/activity_explore.xml
@@ -3,29 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/explore_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     tools:context=".presentation.controller.ExploreActivity">
-
-    <ImageView
-        android:id="@+id/image1"
-        android:layout_margin="16dp"
-        android:layout_width="200dp"
-        android:layout_height="200dp" />
-
-    <ImageView
-        android:id="@+id/image2"
-        android:layout_margin="16dp"
-        android:layout_width="200dp"
-        android:layout_height="200dp" />
-
-    <Button
-        android:id="@+id/button"
-        android:text="UPLOAD"
-        android:layout_margin="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
