--- a/TwoChange/app/src/main/res/layout/fragment_ad_list.xml
+++ b/TwoChange/app/src/main/res/layout/fragment_ad_list.xml
@@ -14,6 +14,15 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ad_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/match_button"/>
+
+    <Button
+        android:id="@+id/match_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="MATCH"/>
 
 </RelativeLayout>
