--- a/TwoChange/app/src/main/res/layout/fragment_login.xml
+++ b/TwoChange/app/src/main/res/layout/fragment_login.xml
@@ -22,7 +22,7 @@
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logInBtn"
+        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
         tools:layout_editor_absoluteY="341dp" />
 
     <TextView
@@ -75,7 +75,7 @@
         android:layout_height="24dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:text="Email:"
         android:textSize="18sp"
         app:layout_constraintHorizontal_bias="0.538"
@@ -84,7 +84,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/logInBtn"
+        android:id="@+id/loginBtn"
         android:layout_width="339dp"
         android:layout_height="51dp"
         android:layout_marginLeft="8dp"
